Added outlined functionality w/ overflow hidden parallax effect.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,10 @@ html, body {
     background-color: black;
 }
 
+body {
+    overflow: hidden;
+}
+
 h1 {
     color: white;
     font-weight: bolder;
