--- a/client/src/pages/home/landing.css
+++ b/client/src/pages/home/landing.css
@@ -1,30 +1,34 @@
 .bg__container {
     position: relative;
-    height: 100vh;
+    /* overflow-y: hidden; */
     width: 100vw;
-    overflow: hidden;
+    height: 100vh;
 }
 
 .bg__image {
-    /* position: absolute; */
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+
     background-image: url(/iceland.jpeg);
     background-color: rgba(0,0,0,.8);
     background-blend-mode: multiply;
 
-    background-size: cover;
-
     background-position: center;
     background-repeat: no-repeat;
-    object-fit: cover;
-    height: 100vh;
-    
+
+    background-size: auto 150%;
+    height: 200vh;
+
 }
 
 .landing__center {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100%;
+    height: 100vh;
     flex-direction: column;
     gap: 1rem;
 }
