--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,6 +10,12 @@ h1 {
     font-size: 50px;
 }
 
+h2 {
+    color: white;
+    font-weight: bolder;
+    font-size: 25px;
+}
+
 p {
     color: white;
 }
