Changed landing page image to SVG: https://codepen.io/DrBrad/pen/BdGZrx. Added black border to question. Added media queries to game results.

--- a/client/src/bootstrap.scss
+++ b/client/src/bootstrap.scss
@@ -2,6 +2,7 @@
 $theme-colors: (
   "primary": #62B659,
   "secondary": #F6F8FF,
+  "black": #000000,
 );
 
 // Import Bootstrap and its default variables
