Added scrolling feature to multiple choice text that overflows the listgroup item.

--- a/client/src/pages/train/train.css
+++ b/client/src/pages/train/train.css
@@ -69,6 +69,16 @@
     gap: .5rem;
 }
 
+.mutliple__choice-text {
+    margin: 0;
+    overflow: scroll;
+    white-space: nowrap;
+}
+
+.mutliple__choice-text::-webkit-scrollbar {
+    display: none;
+}
+
 .train__container {
     display: flex;
     justify-content: center;
