--- a/client/src/pages/train/train.css
+++ b/client/src/pages/train/train.css
@@ -70,21 +70,12 @@
 }
 
 .current__question {
-    position: relative;
-    top: 22px;
+    position: absolute;
     z-index: 2;
-    display: flex;
-    justify-content: center;
-    background: white;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 0.5rem;
-    margin-bottom: 0;
-    border-radius: 50%;
-    width: 45px;
-    height: 45px;
-    align-items: center;
+    text-align: center;
     color: black;
+    width: 100%;
+    margin: 0;
 }
 
 .mutliple__choice-text {
@@ -95,6 +86,17 @@
 
 .mutliple__choice-text::-webkit-scrollbar {
     display: none;
+}
+
+.progress__bar {
+    background-color: #62B659;
+    height: 24px;
+    display: flex;
+    align-items: flex-start;
+}
+
+.card-img-top {
+    border-radius: 0;
 }
 
 .train__container {
