--- a/client/src/pages/train/train.css
+++ b/client/src/pages/train/train.css
@@ -76,7 +76,6 @@
     color: black;
     width: 100%;
     margin: 0;
-    background-color: white;
 }
 
 .mutliple__choice-text {
@@ -113,6 +112,10 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+}
+
+.table__image {
+    width: 50%;
 }
 
 @media screen and (max-width: 585px) {
